Run tests with Maven
* tests reports are still stored in tmp/test-results/xml/functional
* "ant reports" still works